[gd_scene load_steps=6 format=2]

[ext_resource path="res://objects/saucer/saucer.gd" type="Script" id=1]
[ext_resource path="res://objects/base_object.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/saucer/saucer.png" type="Texture" id=3]
[ext_resource path="res://objects/saucer/spaceEngineLow_002.ogg" type="AudioStream" id=4]
[ext_resource path="res://objects/saucer/bullet.wav" type="AudioStream" id=5]

[node name="Saucer" groups=["saucer"] instance=ExtResource( 2 )]
modulate = Color( 1, 1, 0.588235, 1 )
scale = Vector2( 1, 1 )
collision_layer = 8
collision_mask = 5
script = ExtResource( 1 )
wrap_buffer = 16

[node name="ObjectCollision" parent="." index="0"]
position = Vector2( 0, 3 )
scale = Vector2( 6, 4 )

[node name="ObjectSprite" parent="." index="1"]
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="EngineHumPlayer" type="AudioStreamPlayer2D" parent="." index="2"]
stream = ExtResource( 4 )
volume_db = -10.0
autoplay = true

[node name="FireDelayTimer" type="Timer" parent="." index="3"]
wait_time = 4.0
autostart = true

[node name="DirectionChangeTimer" type="Timer" parent="." index="4"]
wait_time = 4.0
autostart = true

[node name="BulletSoundPlayer" type="AudioStreamPlayer2D" parent="." index="5"]
stream = ExtResource( 5 )

[connection signal="area_entered" from="." to="." method="_on_Saucer_area_entered"]
[connection signal="timeout" from="FireDelayTimer" to="." method="_on_FireDelayTimer_timeout"]
[connection signal="timeout" from="DirectionChangeTimer" to="." method="_on_DirectionChangeTimer_timeout"]
